Update and rename index.html to ainda.html

--- a/ainda.html
+++ b/ainda.html
@@ -6,7 +6,7 @@
     <!-- Meta Tags -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, intial-scale=1.0" />
-    <meta name="author" content="Salmir Junior e Césr Muchuo" />
+    <meta name="author" content="Salmir Junior e César Muchuo" />
     <meta name="keywords" content="Roupas masculina e feminina, calçados, loja de roupa, loja e calçado" />
     <meta name="description" content="Nesse site encontrará as peças ideias para você e su família!" />
     <meta http-equiv="X-UA-Compatible" content='IE=Edge' />
